Fixed input border color contrast issue.

--- a/packages/app/client/src/ui/styles/themes/light.css
+++ b/packages/app/client/src/ui/styles/themes/light.css
@@ -91,7 +91,7 @@ html {
   --input-bg: var(--neutral-1);
   --input-label-color: var(--neutral-14);
   --input-label-color-disabled: var(--neutral-10);
-  --input-border: 1px solid #C8C8C8;
+  --input-border: 1px solid var(--neutral-7);
   --input-border-focus: 2px solid #00BCF2;
   --input-border-error: 1px solid var(--error-outline);
   --input-placeholder-color: var(--neutral-9);
